; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias.c_LibAliasSaveFragment.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias.c_LibAliasSaveFragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.libalias = type { i32 }
%struct.alias_link = type { i32 }
%struct.ip = type { i32, i32 }

@PKT_ALIAS_ERROR = common dso_local global i32 0, align 4
@PKT_ALIAS_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LibAliasSaveFragment(%struct.libalias* %0, i8* %1) #0 {
  %3 = alloca %struct.libalias*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.alias_link*, align 8
  %7 = alloca %struct.ip*, align 8
  store %struct.libalias* %0, %struct.libalias** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.libalias*, %struct.libalias** %3, align 8
  %9 = call i32 @LIBALIAS_LOCK(%struct.libalias* %8)
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.ip*
  store %struct.ip* %11, %struct.ip** %7, align 8
  %12 = load %struct.libalias*, %struct.libalias** %3, align 8
  %13 = load %struct.ip*, %struct.ip** %7, align 8
  %14 = getelementptr inbounds %struct.ip, %struct.ip* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.ip*, %struct.ip** %7, align 8
  %17 = getelementptr inbounds %struct.ip, %struct.ip* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call %struct.alias_link* @AddFragmentPtrLink(%struct.libalias* %12, i32 %15, i32 %18)
  store %struct.alias_link* %19, %struct.alias_link** %6, align 8
  %20 = load i32, i32* @PKT_ALIAS_ERROR, align 4
  store i32 %20, i32* %5, align 4
  %21 = load %struct.alias_link*, %struct.alias_link** %6, align 8
  %22 = icmp ne %struct.alias_link* %21, null
  br i1 %22, label %23, label %28

23:                                               ; preds = %2
  %24 = load %struct.alias_link*, %struct.alias_link** %6, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @SetFragmentPtr(%struct.alias_link* %24, i8* %25)
  %27 = load i32, i32* @PKT_ALIAS_OK, align 4
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %23, %2
  %29 = load %struct.libalias*, %struct.libalias** %3, align 8
  %30 = call i32 @LIBALIAS_UNLOCK(%struct.libalias* %29)
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @LIBALIAS_LOCK(%struct.libalias*) #1

declare dso_local %struct.alias_link* @AddFragmentPtrLink(%struct.libalias*, i32, i32) #1

declare dso_local i32 @SetFragmentPtr(%struct.alias_link*, i8*) #1

declare dso_local i32 @LIBALIAS_UNLOCK(%struct.libalias*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
